--- a/AirportUWPApp/AirportUWPApp/MainPage.xaml
+++ b/AirportUWPApp/AirportUWPApp/MainPage.xaml
@@ -25,8 +25,7 @@
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
         <Rectangle Fill="{ThemeResource AppBarBackgroundThemeBrush}" Grid.Row="0" Grid.ColumnSpan="3"/>
-        <!--C{x:Bind ViewModel.Pilots}-->
-        <StackPanel Grid.Row="0"
+       <StackPanel Grid.Row="0"
                     Grid.Column="0"
                     Grid.ColumnSpan="8"
                     Orientation="Horizontal"
@@ -72,19 +71,12 @@
                 Margin="8"
                 Click="GoToDepartures_Click"/>
         </StackPanel>
-        <SplitView IsPaneOpen="True"
-                   DisplayMode="Inline"
-                   OpenPaneLength="296"
-                   Grid.Row="1"
-                   Grid.Column="0"
-                   Grid.ColumnSpan="8">
-            <SplitView.Pane>
-                <TextBlock Style="{ThemeResource BodyTextBlockStyle}" 
-                                   Margin="0,9" 
-                                   Text="something" />
-            </SplitView.Pane>
-            <Grid></Grid>
-        </SplitView>
+        <Frame Name="MainFrame"
+               Grid.Row="1"
+               Grid.Column="0"
+               Grid.ColumnSpan="8">
+            
+        </Frame>
        
     </Grid>
 </Page>
