--- a/AirportUWPApp/AirportUWPApp/Views/PlaneView.xaml
+++ b/AirportUWPApp/AirportUWPApp/Views/PlaneView.xaml
@@ -5,10 +5,117 @@
     xmlns:local="using:AirportUWPApp.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:models="using:AirportUWPApp.Models"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <ListView x:Name="ListContainer"
+                  Grid.Column="0"
+                  Grid.Row="0"
+                  Grid.RowSpan="3"
+                  SelectionChanged="OnSelectionChanged"
+                  IsItemClickEnabled="True"
+                  ItemClick="OnItemClick">
+            <ListView.ItemTemplate>
+                <DataTemplate x:DataType="models:Plane">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <Ellipse x:Name="Ellipse"
+                         Grid.RowSpan="2"
+                         Width ="12"
+                         Height="12"
+                         Margin="6"
+                         VerticalAlignment="Center"
+                         HorizontalAlignment="Center"
+                         Fill="LightGray"/>
+                        <TextBlock Grid.Column="1"
+                           Text="{x:Bind Name}" 
+                           Style="{ThemeResource BaseTextBlockStyle}"
+                           Margin="12,6,0,0"/>
+                        <TextBlock  Grid.Column="1"
+                            Grid.Row="1"
+                            Text="{x:Bind TypeOfPlane.Model}" 
+                            Style="{ThemeResource BodyTextBlockStyle}"
+                            Margin="12,0,0,6"/>
+                    </Grid>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+        <ContentPresenter x:Name="DetailContainer"
+                          BorderThickness="1,0,1,0"
+                          BorderBrush="{ThemeResource SystemControlForegroundBaseLowBrush}"
+                          Padding="20 10 20 10"
+                    Grid.Column="1"
+                    Grid.Row="0"
+                    Grid.RowSpan="3"
+                    Content="{x:Bind ListContainer.SelectedItem, Mode=OneWay}">
+            <ContentPresenter.ContentTemplate>
+                <DataTemplate x:DataType="models:Plane">
+                    <StackPanel>
+                        <TextBlock Text="Id: " Style="{StaticResource TitleTextBlockStyle}"/>
+                        <TextBlock Text="{x:Bind Id}"/>
+                        <TextBlock Text="Name: " Style="{StaticResource TitleTextBlockStyle}"/>
+                        <TextBlock Text="{x:Bind Name}"/>
+                        <TextBlock Text="ReleaseDate: " Style="{StaticResource TitleTextBlockStyle}"/>
+                        <TextBlock Text="{x:Bind  ReleaseDate}"/>
+                        <TextBlock Text="Operational Life: " Style="{StaticResource TitleTextBlockStyle}"/>
+                        <TextBlock Text="{x:Bind OperationLife}"/>
+                        <TextBlock Text="Type: " Style="{StaticResource TitleTextBlockStyle}"/>
+                        <TextBlock Text="Id: "/>
+                        <TextBlock Text="{x:Bind TypeOfPlane.Id}"/>
+                        <TextBlock Text="Model: "/>
+                        <TextBlock Text="{x:Bind TypeOfPlane.Model}"/>
+                        <TextBlock Text="Seats: "/>
+                        <TextBlock Text="{x:Bind TypeOfPlane.Seats}"/>
+                        <TextBlock Text="AirLift: "/>
+                        <TextBlock Text="{x:Bind TypeOfPlane.AirLift}"/>
+                    </StackPanel>
+                </DataTemplate>
+            </ContentPresenter.ContentTemplate>
 
+        </ContentPresenter>
+        <StackPanel x:Name="FormContainer"
+                    Grid.Column="2"
+                    Grid.Row="0"
+                    Grid.RowSpan="3"
+                    Padding="20 10 20 10"
+                    DataContext="{x:Bind ViewModel.SelectedPlane, Mode=TwoWay}">
+            <TextBlock Text="Change Plane" Style="{StaticResource TitleTextBlockStyle}"/>
+            <TextBox x:Name="PId" DataContext="{x:Bind ViewModel.SelectedPlane.Id}" Header="Id" Margin="0,24,0,0" MaxLength="50" Width="400" HorizontalAlignment="Left" InputScope="Number" />
+            <TextBox x:Name="PName" DataContext="{x:Bind ViewModel.SelectedPlane.Name}" Header= "Name" Margin="0,24,0,0" MaxLength="32" Width="400" HorizontalAlignment="Left" InputScope="NameOrPhoneNumber"/>
+            <DatePicker x:Name="PReleaseDate" DataContext="{x:Bind ViewModel.SelectedPlane.ReleaseDate}" Header= "Release Date" Margin="0,24,0,0" Width="400" HorizontalAlignment="Left" />
+            <TextBox x:Name="POperationLife" DataContext="{x:Bind ViewModel.SelectedPlane.OperationLife}" Header="Operation Life" Margin="0,24,0,0" Width="400" HorizontalAlignment="Left" />
+            <TextBlock Text="Change Plane" />
+            <TextBox x:Name="PTypeId" DataContext="{x:Bind ViewModel.SelectedPlane.TypeOfPlane.Id}" Header="Type Id" Margin="0,24,0,0" MaxLength="50" Width="400" HorizontalAlignment="Left" InputScope="Number" />
+            <TextBox x:Name="PTypeModel" DataContext="{x:Bind ViewModel.SelectedPlane.TypeOfPlane.Model}" Header="Type Model" Margin="0,24,0,0" MaxLength="50" Width="400" HorizontalAlignment="Left" InputScope="NameOrPhoneNumber" />
+            <TextBox x:Name="PTypeSeats" DataContext="{x:Bind ViewModel.SelectedPlane.TypeOfPlane.Seats}" Header="Type Seats" Margin="0,24,0,0" MaxLength="50" Width="400" HorizontalAlignment="Left" InputScope="Number" />
+            <TextBox x:Name="PTypeLift" DataContext="{x:Bind ViewModel.SelectedPlane.TypeOfPlane.AirLift}" Header="Type Airlift" Margin="0,24,0,0" MaxLength="50" Width="400" HorizontalAlignment="Left" InputScope="Number" />
+
+            <StackPanel Orientation="Horizontal">
+
+                <Button Content="Update" Margin="0,24" Click="Button_Click"/>
+                <Button Content="Add New" Margin="24" Click="Button_Click_1"/>
+                <Button Content="Delete" Margin="24" Click="Button_Click_2"/>
+
+            </StackPanel>
+        </StackPanel>
     </Grid>
 </Page>
