--- a/AirportUWPApp/AirportUWPApp/Views/FlightView.xaml
+++ b/AirportUWPApp/AirportUWPApp/Views/FlightView.xaml
@@ -5,10 +5,140 @@
     xmlns:local="using:AirportUWPApp.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:models="using:AirportUWPApp.Models"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <ListView x:Name="ListContainer"
+                  Grid.Column="0"
+                  Grid.Row="0"
+                  Grid.RowSpan="3"
+                  SelectionChanged="OnSelectionChanged"
+                  IsItemClickEnabled="True"
+                  ItemClick="OnItemClick">
+            <ListView.ItemTemplate>
+                <DataTemplate x:DataType="models:Flight">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        
+                        <TextBlock Grid.Column="0"
+                                   Grid.Row="0"
+                           Text="{x:Bind DeparturePoint}" 
+                           Style="{ThemeResource BaseTextBlockStyle}"
+                           Margin="12,6,0,0"/>
+                        <TextBlock  Grid.Column="0"
+                            Grid.Row="1"
+                            Text="{x:Bind Destination}" 
+                            Style="{ThemeResource BodyTextBlockStyle}"
+                            Margin="12,0,0,6"/>
+                        <TextBlock Grid.Column="1"
+                                   Grid.Row="0"
+                           Text="{x:Bind DepartureTime}" 
+                           Style="{ThemeResource BaseTextBlockStyle}"
+                           Margin="12,6,0,0"/>
+                        
+                    </Grid>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+        <ContentPresenter x:Name="DetailContainer"
+                          BorderThickness="1,0,1,0"
+                          BorderBrush="{ThemeResource SystemControlForegroundBaseLowBrush}"
+                          Padding="20 10 20 10"
+                    Grid.Column="1"
+                    Grid.Row="0"
+                    Grid.RowSpan="3"
+                    Content="{x:Bind ListContainer.SelectedItem, Mode=OneWay}">
+            <ContentPresenter.ContentTemplate>
+                <DataTemplate x:DataType="models:Flight">
+                    <StackPanel>
+                        <TextBlock Text="Id: " Style="{StaticResource TitleTextBlockStyle}"/>
+                        <TextBlock Text="{x:Bind Id}"/>
+                        <TextBlock Text="Departure Point: " Style="{StaticResource TitleTextBlockStyle}"/>
+                        <TextBlock Text="{x:Bind DeparturePoint}"/>
+                        <TextBlock Text="Departure Time: " Style="{StaticResource TitleTextBlockStyle}"/>
+                        <TextBlock Text="{x:Bind  DepartureTime}"/>
+                        <TextBlock Text="Destination: " Style="{StaticResource TitleTextBlockStyle}"/>
+                        <TextBlock Text="{x:Bind Destination}"/>
+                        <TextBlock Text="Arrival Time: "/>
+                        <TextBlock Text="{x:Bind ArrivalTime}"/>
+                        <ListView ItemsSource="{x:Bind Tickets}">
+                            <DataTemplate x:DataType="models:Ticket">
+                                <Grid>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition/>
+                                        <RowDefinition/>
+                                        <RowDefinition/>
+                                    </Grid.RowDefinitions>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition/>
+                                        <ColumnDefinition/>
+                                    </Grid.ColumnDefinitions>
 
+                                    <TextBlock Grid.Row="0" Grid.Column="0"
+                                        Text="Id: " Style="{StaticResource TitleTextBlockStyle}"/>
+                                    <TextBlock Grid.Row="0" Grid.Column="1"
+                                               Text="{x:Bind Id}"/>
+                                    <TextBlock Grid.Row="1" Grid.Column="0"
+                                        Text="Price: " Style="{StaticResource TitleTextBlockStyle}"/>
+                                    <TextBlock Grid.Row="1" Grid.Column="1"
+                                        Text="{x:Bind Price}"/>
+                                    <TextBlock Grid.Row="2" Grid.Column="0"
+                                        Text="Flight Id: " Style="{StaticResource TitleTextBlockStyle}"/>
+                                    <TextBlock Grid.Row="2" Grid.Column="1"
+                                        Text="{x:Bind FlightId}"/>
+                                </Grid>
+                                    
+
+                            </DataTemplate>
+                        </ListView>
+                    </StackPanel>
+                </DataTemplate>
+            </ContentPresenter.ContentTemplate>
+
+        </ContentPresenter>
+        <StackPanel x:Name="FormContainer"
+                    Grid.Column="2"
+                    Grid.Row="0"
+                    Grid.RowSpan="3"
+                    Padding="20 10 20 10"
+                    DataContext="{x:Bind ViewModel.SelectedFlight, Mode=TwoWay}">
+            <TextBlock Text="Change Flight" Style="{StaticResource TitleTextBlockStyle}"/>
+            <TextBox x:Name="DId" DataContext="{x:Bind ViewModel.SelectedFlight.Id}" Header="Id" Margin="0,24,0,0" MaxLength="50" Width="400" HorizontalAlignment="Left" InputScope="Number" />
+            <TextBox x:Name="DepPoint" DataContext="{x:Bind ViewModel.SelectedFlight.DeparturePoint}" Header= "Departure Point" Margin="0,24,0,0" MaxLength="32" Width="400" HorizontalAlignment="Left" InputScope="NameOrPhoneNumber"/>
+            <DatePicker x:Name="DepTime" DataContext="{x:Bind ViewModel.SelectedFlight.DepartureTime}" Header= "Departure Time" Margin="0,24,0,0" Width="400" HorizontalAlignment="Left" />
+            <TextBox x:Name="Destination" DataContext="{x:Bind ViewModel.SelectedFlight.Destination}" Header="Destination" Margin="0,24,0,0" Width="400" HorizontalAlignment="Left" />
+            <DatePicker x:Name="ArrTime" DataContext="{x:Bind ViewModel.SelectedFlight.ArrivalTime}" Header= "Arrival Time" Margin="0,24,0,0" Width="400" HorizontalAlignment="Left" />
+            
+            <TextBlock Text="Change Ticket" Style="{StaticResource TitleTextBlockStyle}"/>
+            <TextBox x:Name="TId"  Header="Id" Margin="0,24,0,0" MaxLength="50" Width="400" HorizontalAlignment="Left" InputScope="Number" />
+            <TextBox x:Name="TPrice" Header= "Price" Margin="0,24,0,0" MaxLength="32" Width="400" HorizontalAlignment="Left" InputScope="Number"/>
+            <TextBox x:Name="TFlight" DataContext="{x:Bind ViewModel.SelectedFlight.Id }" Header= "Flight Id" Margin="0,24,0,0" MaxLength="32" Width="400" HorizontalAlignment="Left" InputScope="Number"/>
+            <StackPanel Orientation="Horizontal">
+
+                <Button Content="Update" Margin="0,24" Click="Button_Click"/>
+                <Button Content="Add New" Margin="24" Click="Button_Click_1"/>
+                <Button Content="Delete" Margin="24" Click="Button_Click_2"/>
+
+            </StackPanel>
+        </StackPanel>
     </Grid>
 </Page>
