--- a/AirportUWPApp/AirportUWPApp/Views/PlaneTypeView.xaml
+++ b/AirportUWPApp/AirportUWPApp/Views/PlaneTypeView.xaml
@@ -4,194 +4,103 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:m="using:AirportUWPApp.Models"
+    xmlns:models="using:AirportUWPApp.Models"
     mc:Ignorable="d">
 
-    <Page.Transitions>
-        <TransitionCollection>
-            <EntranceThemeTransition />
-        </TransitionCollection>
-    </Page.Transitions>
-    <Page.BottomAppBar>
-        <CommandBar>
-            <AppBarButton x:Name="AddItemBtn" Label="Add Item" Icon="Add" Click="AddItem" />
-            <AppBarButton x:Name="UpdateItemBtn" Label="Update Item" Icon="PostUpdate" Click="UpdateItem" />
-            <AppBarButton x:Name="DeleteItemBtn" Label="Delete Item" Icon="Delete" Click="DeleteItem" />
-            <AppBarButton x:Name="CancelSelectionBtn" Label="Cancel" Icon="Cancel" Click="CancelSelection" />
-        </CommandBar>
-    </Page.BottomAppBar>
-    <Page.Resources>
-        <DataTemplate x:Name="PlaneTypeListViewTemplate" x:DataType="m:PlaneType">
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <TextBlock Grid.Column="1"
-                           Text="{x:Bind Id}" 
-                           Margin="12,6,0,0"/>
-                <TextBlock Grid.Column="1"
-                           Grid.Row="1"
-                           Text="{x:Bind Model}" 
-                           Margin="12,0,0,6"/>
-            </Grid>
-        </DataTemplate>
-    </Page.Resources>
-
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition x:Name="MasterColumn" Width="320"  />
-            <ColumnDefinition x:Name="DetailColumn" Width="*" /> 
-            <ColumnDefinition x:Name="FormColumn" Width="*" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
-
-        <Border Background="{ThemeResource SystemControlBackgroundChromeMediumBrush}">
-            <TextBlock Text="Types of planes" Margin="14,8,8,8"
-                           Style="{ThemeResource TitleTextBlockStyle}" />
-        </Border>
-
-        <ListView x:Name="MasterListView" 
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <ListView x:Name="ListContainer"
+                  Grid.Column="0"
+                  Grid.Row="0"
+                  Grid.RowSpan="3"
                   SelectionChanged="OnSelectionChanged"
                   IsItemClickEnabled="True"
-                  ShowsScrollingPlaceholders="False"
-                  ItemTemplate="{StaticResource PlaneTypeListViewTemplate }"
-                  ItemClick="OnItemClick"
-                  Grid.Column="0"
-                  Grid.Row="1"
-                  Background="Navy"
-                  >
-            <ListViewItem>
-                <TextBlock Text="{x:Bind ViewModel.Types.Count}"></TextBlock>
-            </ListViewItem>
-            <ListView.ItemContainerStyle>
-                <Style TargetType="ListViewItem">
-                    <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-                </Style>
-            </ListView.ItemContainerStyle>
+                  ItemClick="OnItemClick">
+            <ListView.ItemTemplate>
+                <DataTemplate x:DataType="models:PlaneType">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <Ellipse x:Name="Ellipse"
+                         Grid.RowSpan="2"
+                         Width ="12"
+                         Height="12"
+                         Margin="6"
+                         VerticalAlignment="Center"
+                         HorizontalAlignment="Center"
+                         Fill="LightGray"/>
+                        <TextBlock Grid.Column="1"
+                           Text="{x:Bind Id}" 
+                           Style="{ThemeResource BaseTextBlockStyle}"
+                           Margin="12,6,0,0"/>
+                        <TextBlock  Grid.Column="1"
+                            Grid.Row="1"
+                            Text="{x:Bind Model}" 
+                            Style="{ThemeResource BodyTextBlockStyle}"
+                            Margin="12,0,0,6"/>
+                    </Grid>
+                </DataTemplate>
+            </ListView.ItemTemplate>
         </ListView>
-
-        <ContentPresenter
-                x:Name="DetailContentPresenter"
-                Grid.Column="1"
-                Grid.RowSpan="2"
-                BorderThickness="1,0,0,0"
-                Padding="24,0"
-                BorderBrush="{ThemeResource SystemControlForegroundBaseLowBrush}"
-                Background="Silver"
-                Content="{x:Bind MasterListView.SelectedItem, Mode=OneWay}">
+        <ContentPresenter x:Name="DetailContainer"
+                          BorderThickness="1,0,1,0"
+                          BorderBrush="{ThemeResource SystemControlForegroundBaseLowBrush}"
+                          Padding="20 10 20 10"
+                    Grid.Column="1"
+                    Grid.Row="0"
+                    Grid.RowSpan="3"
+                    Content="{x:Bind ListContainer.SelectedItem, Mode=OneWay}">
             <ContentPresenter.ContentTemplate>
-                <DataTemplate x:DataType="m:PlaneType">
+                <DataTemplate x:DataType="models:PlaneType">
                     <StackPanel>
-                        <TextBlock Style="{ThemeResource TitleTextBlockStyle}"
-                                   Margin="0,8"       
-                                   Text="{x:Bind Id}"/>
-                        <TextBlock Style="{ThemeResource BodyTextBlockStyle}"
-                                   Margin="0,9" 
-                                   Text="{x:Bind Model}" />
-                        <TextBlock Style="{ThemeResource BodyTextBlockStyle}" 
-                                   Margin="0,9" 
-                                   Text="{x:Bind Seats}" />
-                        <TextBlock Style="{ThemeResource BodyTextBlockStyle}" 
-                                   Margin="0,9" 
-                                   Text="{x:Bind AirLift}" />
+                        <TextBlock Text="Id: " Style="{StaticResource TitleTextBlockStyle}"/>
+                        <TextBlock Text="{x:Bind Id}"/>
+                        <TextBlock Text="Model: " Style="{StaticResource TitleTextBlockStyle}"/>
+                        <TextBlock Text="{x:Bind Model}"/>
+                        <TextBlock Text="Seats: " Style="{StaticResource TitleTextBlockStyle}"/>
+                        <TextBlock Text="{x:Bind Seats}"/>
+                        <TextBlock Text="Airlift: " Style="{StaticResource TitleTextBlockStyle}"/>
+                        <TextBlock Text="{x:Bind AirLift}"/>
                     </StackPanel>
                 </DataTemplate>
             </ContentPresenter.ContentTemplate>
-            <ContentPresenter.ContentTransitions>
-                <TransitionCollection/>
-            </ContentPresenter.ContentTransitions>
+
         </ContentPresenter>
         <StackPanel x:Name="FormContainer"
                     Grid.Column="2"
                     Grid.Row="0"
-                    Grid.RowSpan="2"
-                    Background="Navy"
+                    Grid.RowSpan="3"
+                    Padding="20 10 20 10"
                     DataContext="{x:Bind ViewModel.Type, Mode=TwoWay}">
-            <TextBlock Style="{ThemeResource TitleTextBlockStyle}"
-                                   Margin="0,8"       
-                                   Text="{x:Bind ViewModel.Type.Id}"/>
-            <TextBlock Style="{ThemeResource BodyTextBlockStyle}"
-                                   Margin="0,9" 
-                                   Text="{x:Bind ViewModel.Type.Model}" />
-            <TextBlock Style="{ThemeResource BodyTextBlockStyle}" 
-                                   Margin="0,9" 
-                                   Text="{x:Bind ViewModel.Type.Seats}" />
-            <TextBlock Style="{ThemeResource BodyTextBlockStyle}" 
-                                   Margin="0,9" 
-                                   Text="{x:Bind ViewModel.Type.AirLift}" />
+            <TextBlock Text="Change Type" Style="{StaticResource TitleTextBlockStyle}"/>
+            <TextBox x:Name="TId" DataContext="{x:Bind ViewModel.Type.Id}" Header="Id" Margin="0,24,0,0" MaxLength="50" Width="400" HorizontalAlignment="Left" InputScope="Number" />
+            <TextBox x:Name="TModel" DataContext="{x:Bind ViewModel.Type.Model}" Header= "Model" Margin="0,24,0,0" MaxLength="32" Width="400" HorizontalAlignment="Left" InputScope="NameOrPhoneNumber"/>
+            <TextBox x:Name="TSeats" DataContext="{x:Bind ViewModel.Type.Seats}" Header= "Seats" Margin="0,24,0,0" MaxLength="32" Width="400" HorizontalAlignment="Left" InputScope="Number"/>
+            <TextBox x:Name="TAirLift" DataContext="{x:Bind ViewModel.Type.AirLift}" Header="Airlift" Margin="0,24,0,0" MaxLength="50" Width="400" HorizontalAlignment="Left" InputScope="Number" />
+
+            <StackPanel Orientation="Horizontal">
+
+                <Button Content="Update" Margin="24" Click="Button_Click"/>
+                <Button Content="Add New" Margin="24" Click="Button_Click_1"/>
+                <Button Content="Delete" Margin="24" Click="Button_Click_2"/>
+
+            </StackPanel>
         </StackPanel>
+
     </Grid>
-
-
-
-
-
-
-
-
-
-
-    <!--<Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1*"/>
-                <ColumnDefinition Width="3*"/>
-                <ColumnDefinition Width="1*"/>
-            </Grid.ColumnDefinitions>
-
-             
-            <Button Content="Set"
-            Click="{x:Bind ViewModel.Set}"
-            HorizontalAlignment="Stretch"
-            Foreground="White"
-            Margin="18"
-            Grid.Row="0"
-            Grid.Column="2"/>
-
-            <ListView Grid.ColumnSpan="3" Grid.Row="1" ItemsSource="{x:Bind ViewModel.Types}">
-                <ListView.ItemTemplate>
-                    <DataTemplate x:DataType="m:PlaneType">
-                        <Grid Margin="16">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="40"/>
-                                <ColumnDefinition Width="*"/>
-                            </Grid.ColumnDefinitions>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="24"/>
-                                <RowDefinition Height="24"/>
-                            </Grid.RowDefinitions>
-
-                            <StackPanel Orientation="Horizontal"
-                                    Grid.Column="1"
-                                    Grid.Row="1">
-                                <TextBlock Text="{x:Bind Id}"
-                                   Foreground="#444444"
-                                   FontSize="13"
-                                   Padding="20,0,0,0"/>
-                                <TextBlock Text="From:"
-                                   Foreground="#888888"
-                                   FontSize="13"
-                                   Padding="20,0,0,0"/>
-                                <TextBlock Text="{x:Bind AirLift}"
-                                   Foreground="#444444"
-                                   FontSize="13"
-                                   Padding="6,0,0,0"/>
-                            </StackPanel>
-                        </Grid>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
-        </Grid>-->
 </Page>
