--- a/AirportUWPApp/AirportUWPApp/Views/FlightView.xaml
+++ b/AirportUWPApp/AirportUWPApp/Views/FlightView.xaml
@@ -115,30 +115,35 @@
             </ContentPresenter.ContentTemplate>
 
         </ContentPresenter>
-        <StackPanel x:Name="FormContainer"
+        <ScrollViewer Grid.Column="2"
+                    Grid.Row="0"
+                    Grid.RowSpan="3">
+            <StackPanel x:Name="FormContainer"
                     Grid.Column="2"
                     Grid.Row="0"
                     Grid.RowSpan="3"
                     Padding="20 10 20 10"
                     DataContext="{x:Bind ViewModel.SelectedFlight, Mode=TwoWay}">
-            <TextBlock Text="Change Flight" Style="{StaticResource TitleTextBlockStyle}"/>
-            <TextBox x:Name="DId" DataContext="{x:Bind ViewModel.SelectedFlight.Id}" Header="Id" Margin="0,24,0,0" MaxLength="50" Width="400" HorizontalAlignment="Left" InputScope="Number" />
-            <TextBox x:Name="DepPoint" DataContext="{x:Bind ViewModel.SelectedFlight.DeparturePoint}" Header= "Departure Point" Margin="0,24,0,0" MaxLength="32" Width="400" HorizontalAlignment="Left" InputScope="NameOrPhoneNumber"/>
-            <DatePicker x:Name="DepTime" DataContext="{x:Bind ViewModel.SelectedFlight.DepartureTime}" Header= "Departure Time" Margin="0,24,0,0" Width="400" HorizontalAlignment="Left" />
-            <TextBox x:Name="Destination" DataContext="{x:Bind ViewModel.SelectedFlight.Destination}" Header="Destination" Margin="0,24,0,0" Width="400" HorizontalAlignment="Left" />
-            <DatePicker x:Name="ArrTime" DataContext="{x:Bind ViewModel.SelectedFlight.ArrivalTime}" Header= "Arrival Time" Margin="0,24,0,0" Width="400" HorizontalAlignment="Left" />
-            
-            <TextBlock Text="Change Ticket" Style="{StaticResource TitleTextBlockStyle}"/>
-            <TextBox x:Name="TId"  Header="Id" Margin="0,24,0,0" MaxLength="50" Width="400" HorizontalAlignment="Left" InputScope="Number" />
-            <TextBox x:Name="TPrice" Header= "Price" Margin="0,24,0,0" MaxLength="32" Width="400" HorizontalAlignment="Left" InputScope="Number"/>
-            <TextBox x:Name="TFlight" DataContext="{x:Bind ViewModel.SelectedFlight.Id }" Header= "Flight Id" Margin="0,24,0,0" MaxLength="32" Width="400" HorizontalAlignment="Left" InputScope="Number"/>
-            <StackPanel Orientation="Horizontal">
+                <TextBlock Text="Change Flight" Style="{StaticResource TitleTextBlockStyle}"/>
+                <TextBox x:Name="DId" DataContext="{x:Bind ViewModel.SelectedFlight.Id}" Header="Id" Margin="0,12,0,0" HorizontalAlignment="Left" InputScope="Number" />
+                <TextBox x:Name="DepPoint" DataContext="{x:Bind ViewModel.SelectedFlight.DeparturePoint}" Header= "Departure Point" Margin="0,12,0,0" MaxLength="50" Width="400" HorizontalAlignment="Left" InputScope="NameOrPhoneNumber"/>
+                <DatePicker x:Name="DepTime" DataContext="{x:Bind ViewModel.SelectedFlight.DepartureTime}" Header= "Departure Time" Margin="0,12,0,0" HorizontalAlignment="Left" />
+                <TextBox x:Name="Destination" DataContext="{x:Bind ViewModel.SelectedFlight.Destination}" Header="Destination" Margin="0,12,0,0" Width="400" HorizontalAlignment="Left" />
+                <DatePicker x:Name="ArrTime" DataContext="{x:Bind ViewModel.SelectedFlight.ArrivalTime}" Header= "Arrival Time" Margin="0,12,0,0" HorizontalAlignment="Left" />
 
-                <Button Content="Update" Margin="0,24" Click="Button_Click"/>
-                <Button Content="Add New" Margin="24" Click="Button_Click_1"/>
-                <Button Content="Delete" Margin="24" Click="Button_Click_2"/>
+                <TextBlock Text="Change Ticket" Style="{StaticResource TitleTextBlockStyle}"/>
+                <TextBox x:Name="TId"  Header="Id" Margin="0,12,0,0" HorizontalAlignment="Left" InputScope="Number" />
+                <TextBox x:Name="TPrice" Header= "Price" Width="400" Margin="0,12,0,0" HorizontalAlignment="Left" InputScope="Number"/>
+                <TextBox x:Name="TFlight" DataContext="{x:Bind ViewModel.SelectedFlight.Id }" Header= "Flight Id" Margin="0,12,0,0" HorizontalAlignment="Left" InputScope="Number"/>
+                <StackPanel Orientation="Horizontal">
 
+                    <Button Content="Update" Margin="24" Click="Button_Click"/>
+                    <Button Content="Add New" Margin="24" Click="Button_Click_1"/>
+                    <Button Content="Delete" Margin="24" Click="Button_Click_2"/>
+
+                </StackPanel>
             </StackPanel>
-        </StackPanel>
+        </ScrollViewer>
+        
     </Grid>
 </Page>
