--- a/AirportUWPApp/AirportUWPApp/Views/PlaneView.xaml
+++ b/AirportUWPApp/AirportUWPApp/Views/PlaneView.xaml
@@ -92,7 +92,49 @@
             </ContentPresenter.ContentTemplate>
 
         </ContentPresenter>
-        <StackPanel x:Name="FormContainer"
+        <ScrollViewer Grid.Column="2"
+                    Grid.Row="0"
+                    Grid.RowSpan="3">
+        <Grid x:Name="FormContainer"
+                    Grid.Column="2"
+                    Grid.Row="0"
+                    Grid.RowSpan="3"
+                    Padding="20 10 20 10"
+                    DataContext="{x:Bind ViewModel.SelectedPlane, Mode=TwoWay}">
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <TextBlock Text="Change Plane" Grid.Row="0" Style="{StaticResource TitleTextBlockStyle}"/>
+            <TextBox x:Name="PId" DataContext="{x:Bind ViewModel.SelectedPlane.Id}" Header="Id" Grid.Row="1" Margin="0,12,0,0" HorizontalAlignment="Left" InputScope="Number" />
+            <TextBox x:Name="PName" DataContext="{x:Bind ViewModel.SelectedPlane.Name}" Header= "Name" Grid.Row="2" Margin="0,12,0,0" MaxLength="50" Width="400" HorizontalAlignment="Left" InputScope="NameOrPhoneNumber"/>
+            <DatePicker x:Name="PReleaseDate" DataContext="{x:Bind ViewModel.SelectedPlane.ReleaseDate}" Header= "Release Date" Grid.Row="3" Margin="0,12,0,0" HorizontalAlignment="Left" />
+            <TextBox x:Name="POperationLife" DataContext="{x:Bind ViewModel.SelectedPlane.OperationLife}" Header="Operation Life" Grid.Row="4" Margin="0,12,0,0" Width="400" HorizontalAlignment="Left" />
+            <TextBlock Text="Change Plane" Grid.Row="5" Style="{StaticResource TitleTextBlockStyle}"/>
+            <TextBox x:Name="PTypeId" DataContext="{x:Bind ViewModel.SelectedPlane.TypeOfPlane.Id}" Header="Type Id" Grid.Row="6" Margin="0,12,0,0"  HorizontalAlignment="Left" InputScope="Number" />
+            <TextBox x:Name="PTypeModel" DataContext="{x:Bind ViewModel.SelectedPlane.TypeOfPlane.Model}" Header="Type Model" Grid.Row="7" Margin="0,12,0,0" MaxLength="50" Width="400" HorizontalAlignment="Left" InputScope="NameOrPhoneNumber" />
+            <TextBox x:Name="PTypeSeats" DataContext="{x:Bind ViewModel.SelectedPlane.TypeOfPlane.Seats}" Header="Type Seats" Grid.Row="8" Margin="0,12,0,0" HorizontalAlignment="Left" InputScope="Number" />
+            <TextBox x:Name="PTypeLift" DataContext="{x:Bind ViewModel.SelectedPlane.TypeOfPlane.AirLift}" Header="Type Airlift" Grid.Row="9" Margin="0,12,0,0" HorizontalAlignment="Left" InputScope="Number" />
+
+            <StackPanel Grid.Row="10" Orientation="Horizontal">
+
+                <Button Content="Update" Margin="24" Click="Button_Click"/>
+                <Button Content="Add New" Margin="24" Click="Button_Click_1"/>
+                <Button Content="Delete" Margin="24" Click="Button_Click_2"/>
+
+            </StackPanel>
+        </Grid>
+        </ScrollViewer>
+        <!--<StackPanel x:Name="FormContainer1"
                     Grid.Column="2"
                     Grid.Row="0"
                     Grid.RowSpan="3"
@@ -111,11 +153,11 @@
 
             <StackPanel Orientation="Horizontal">
 
-                <Button Content="Update" Margin="0,24" Click="Button_Click"/>
+                <Button Content="Update" Margin="24" Click="Button_Click"/>
                 <Button Content="Add New" Margin="24" Click="Button_Click_1"/>
                 <Button Content="Delete" Margin="24" Click="Button_Click_2"/>
 
             </StackPanel>
-        </StackPanel>
+        </StackPanel>-->
     </Grid>
 </Page>
