--- a/AirportUWPApp/AirportUWPApp/Views/FlightView.xaml
+++ b/AirportUWPApp/AirportUWPApp/Views/FlightView.xaml
@@ -16,13 +16,19 @@
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition/>
+            <RowDefinition Height="auto"/>
             <RowDefinition/>
             <RowDefinition/>
         </Grid.RowDefinitions>
+
+        <TextBlock Grid.Column="0"
+                Grid.Row="0"
+                HorizontalAlignment="Center"
+                Style="{StaticResource TitleTextBlockStyle}"> Flights:
+        </TextBlock>
         <ListView x:Name="ListContainer"
                   Grid.Column="0"
-                  Grid.Row="0"
+                  Grid.Row="1"
                   Grid.RowSpan="3"
                   SelectionChanged="OnSelectionChanged"
                   IsItemClickEnabled="True"
@@ -59,6 +65,7 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
+        
         <ContentPresenter x:Name="DetailContainer"
                           BorderThickness="1,0,1,0"
                           BorderBrush="{ThemeResource SystemControlForegroundBaseLowBrush}"
