--- a/AirportUWPApp/AirportUWPApp/Views/PilotView.xaml
+++ b/AirportUWPApp/AirportUWPApp/Views/PilotView.xaml
@@ -16,13 +16,19 @@
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition/>
+            <RowDefinition Height="auto"/>
             <RowDefinition/>
             <RowDefinition/>
         </Grid.RowDefinitions>
+
+        <TextBlock Grid.Column="0"
+                Grid.Row="0"
+                HorizontalAlignment="Center"
+                Style="{StaticResource TitleTextBlockStyle}"> Pilots:
+        </TextBlock>
         <ListView x:Name="ListContainer"
                   Grid.Column="0"
-                  Grid.Row="0"
+                  Grid.Row="1"
                   Grid.RowSpan="3"
                   SelectionChanged="OnSelectionChanged"
                   IsItemClickEnabled="True"
