--- a/AirportUWPApp/AirportUWPApp/Views/StewardessView.xaml
+++ b/AirportUWPApp/AirportUWPApp/Views/StewardessView.xaml
@@ -16,13 +16,18 @@
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition/>
+            <RowDefinition Height="auto"/>
             <RowDefinition/>
             <RowDefinition/>
         </Grid.RowDefinitions>
+        <TextBlock Grid.Column="0"
+                Grid.Row="0"
+                HorizontalAlignment="Center"
+                Style="{StaticResource TitleTextBlockStyle}"> Stewardesses:
+        </TextBlock>
         <ListView x:Name="ListContainer"
                   Grid.Column="0"
-                  Grid.Row="0"
+                  Grid.Row="1"
                   Grid.RowSpan="3"
                   SelectionChanged="OnSelectionChanged"
                   IsItemClickEnabled="True"
@@ -85,27 +90,30 @@
             </ContentPresenter.ContentTemplate>
             
         </ContentPresenter>
-        <StackPanel x:Name="FormContainer"
+        <ScrollViewer Grid.Column="2"
+                    Grid.Row="0"
+                    Grid.RowSpan="3">
+            <StackPanel x:Name="FormContainer"
                     Grid.Column="2"
                     Grid.Row="0"
                     Grid.RowSpan="3"
                     Padding="20 10 20 10"
                     DataContext="{x:Bind ViewModel.SelectedStewardess, Mode=TwoWay}">
-            <TextBlock Text="Change Stewardess" Style="{StaticResource TitleTextBlockStyle}"/>
-            <TextBox x:Name="SId" DataContext="{x:Bind ViewModel.SelectedStewardess.Id}" Header="Id" Margin="0,24,0,0" MaxLength="50" Width="400" HorizontalAlignment="Left" InputScope="Number" />
-            <TextBox x:Name="SName" DataContext="{x:Bind ViewModel.SelectedStewardess.Name}" Header= "Name" Margin="0,24,0,0" MaxLength="32" Width="400" HorizontalAlignment="Left" InputScope="PersonalFullName"/>
-            <TextBox x:Name="SSurname" DataContext="{x:Bind ViewModel.SelectedStewardess.Surname}" Header= "Surname" Margin="0,24,0,0" MaxLength="32" Width="400" HorizontalAlignment="Left" InputScope="PersonalFullName"/>
-            <DatePicker x:Name="SBirthDate" DataContext="{x:Bind ViewModel.SelectedStewardess.BirthDate}" Header="BirthDate" Margin="0,24,0,0" Width="400" HorizontalAlignment="Left" />
-            <TextBox x:Name="SCrewId" DataContext="{x:Bind ViewModel.SelectedStewardess.CrewId}" Header="CrewId" Margin="0,24,0,0" MaxLength="50" Width="400" HorizontalAlignment="Left" InputScope="Number" />
-            
-           <StackPanel Orientation="Horizontal">
-               
+                <TextBlock Text="Change Stewardess" Style="{StaticResource TitleTextBlockStyle}"/>
+                <TextBox x:Name="SId" DataContext="{x:Bind ViewModel.SelectedStewardess.Id}" Header="Id" Margin="0,12,0,0" HorizontalAlignment="Left" InputScope="Number" />
+                <TextBox x:Name="SName" DataContext="{x:Bind ViewModel.SelectedStewardess.Name}" Header= "Name" Margin="0,12,0,0" MaxLength="50" Width="400" HorizontalAlignment="Left" InputScope="PersonalFullName"/>
+                <TextBox x:Name="SSurname" DataContext="{x:Bind ViewModel.SelectedStewardess.Surname}" Header= "Surname" Margin="0,12,0,0" MaxLength="50" Width="400" HorizontalAlignment="Left" InputScope="PersonalFullName"/>
+                <DatePicker x:Name="SBirthDate" DataContext="{x:Bind ViewModel.SelectedStewardess.BirthDate}" Header="BirthDate" Margin="0,12,0,0" HorizontalAlignment="Left" />
+                <TextBox x:Name="SCrewId" DataContext="{x:Bind ViewModel.SelectedStewardess.CrewId}" Header="CrewId" Margin="0,12,0,0" HorizontalAlignment="Left" InputScope="Number" />
+
+                <StackPanel Orientation="Horizontal">
+
                     <Button Content="Update" Margin="24" Click="Button_Click"/>
                     <Button Content="Add New" Margin="24" Click="Button_Click_1"/>
                     <Button Content="Delete" Margin="24" Click="Button_Click_2"/>
 
+                </StackPanel>
             </StackPanel>
-        </StackPanel>
-
+        </ScrollViewer>
     </Grid>
 </Page>
