--- a/AirportUWPApp/AirportUWPApp/Views/TicketView.xaml
+++ b/AirportUWPApp/AirportUWPApp/Views/TicketView.xaml
@@ -15,13 +15,18 @@
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition/>
+            <RowDefinition Height="auto"/>
             <RowDefinition/>
             <RowDefinition/>
         </Grid.RowDefinitions>
+        <TextBlock Grid.Column="0"
+                Grid.Row="0"
+                HorizontalAlignment="Center"
+                Style="{StaticResource TitleTextBlockStyle}"> Tickets:
+        </TextBlock>
         <ListView x:Name="ListContainer"
                   Grid.Column="0"
-                  Grid.Row="0"
+                  Grid.Row="1"
                   Grid.RowSpan="3"
                   SelectionChanged="OnSelectionChanged"
                   IsItemClickEnabled="True"
@@ -81,28 +86,30 @@
             </ContentPresenter.ContentTemplate>
 
         </ContentPresenter>
-        
-        
-        <StackPanel x:Name="FormContainer"
+
+        <ScrollViewer Grid.Column="2"
+                    Grid.Row="0"
+                    Grid.RowSpan="3">
+            <StackPanel x:Name="FormContainer"
                     Grid.Column="2"
                     Grid.Row="0"
                     Grid.RowSpan="3"
                     Padding="20 10 20 10"
                     DataContext="{x:Bind ViewModel.SelectedTicket, Mode=TwoWay}">
-            <TextBlock Text="Change Ticket" Style="{StaticResource TitleTextBlockStyle}"/>
-            <TextBox x:Name="TId" DataContext="{x:Bind ViewModel.SelectedTicket.Id}" Header="Id" Margin="0,24,0,0" MaxLength="50" Width="400" HorizontalAlignment="Left" InputScope="Number" />
-            <TextBox x:Name="TPrice" DataContext="{x:Bind ViewModel.SelectedTicket.Price}" Header= "Price" Margin="0,24,0,0" MaxLength="32" Width="400" HorizontalAlignment="Left" InputScope="Number"/>
-            <TextBox x:Name="TFlight" DataContext="{x:Bind ViewModel.SelectedTicket.FlightId}" Header= "Flight Id" Margin="0,24,0,0" MaxLength="32" Width="400" HorizontalAlignment="Left" InputScope="Number"/>
-            
-            <StackPanel Orientation="Horizontal">
+                <TextBlock Text="Change Ticket" Style="{StaticResource TitleTextBlockStyle}"/>
+                <TextBox x:Name="TId" DataContext="{x:Bind ViewModel.SelectedTicket.Id}" Header="Id" Margin="0,12,0,0" HorizontalAlignment="Left" InputScope="Number" />
+                <TextBox x:Name="TFlight" DataContext="{x:Bind ViewModel.SelectedTicket.FlightId}" Header= "Flight Id" Margin="0,12,0,0" HorizontalAlignment="Left" InputScope="Number"/>
+                <TextBox x:Name="TPrice" DataContext="{x:Bind ViewModel.SelectedTicket.Price}" Header= "Price" Margin="0,12,0,0" Width="400" HorizontalAlignment="Left" InputScope="Number"/>
 
-                <Button Content="Update" Margin="24" Click="Button_Click"/>
-                <Button Content="Add New" Margin="24" Click="Button_Click_1"/>
-                <Button Content="Delete" Margin="24" Click="Button_Click_2"/>
+                <StackPanel Orientation="Horizontal">
+
+                    <Button Content="Update" Margin="24" Click="Button_Click"/>
+                    <Button Content="Add New" Margin="24" Click="Button_Click_1"/>
+                    <Button Content="Delete" Margin="24" Click="Button_Click_2"/>
+
+                </StackPanel>
 
             </StackPanel>
-            
-        </StackPanel>
-        
+        </ScrollViewer>
     </Grid>
 </Page>
